05-womginx-tls/womginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: womginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: x.${ROOT_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: womginx
            port:
              name: web
